--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,22 @@
 * {
-    font-family: Helvetica, sans-serif
+    font-family: Helvetica, sans-serif;
 }
 
+/* header */
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: gray;
+    width: 98%;
+    margin: 30px auto 0 auto;
+    height: 100px;
 }
 header div {
     color: gray;
-    padding: 6px 7px 6px 45px;
+    padding: 5px 15px 5px 55px;
     background-color: lightblue;
-    font-size: 25px;
+    font-size: 50px;
     font-weight: bold;
 }
 header nav ul {
@@ -24,17 +28,60 @@ header nav ul {
     padding: 5px 40px 5px 5px;
     
 }
-header nav ul li {
-    
-    
-}
-
 header nav ul li a {
     padding: 5px;
     border-bottom: solid 3px lightblue;
     margin: 5px;
+    font-weight: bold;
+    font-size: 20px;
 }
 header a {
     text-decoration: none;
     color: lightblue;
+}
+
+/* hero */
+.hero {
+    background-image: url("../images/unnamed.jpg");
+    background-size: cover;
+    background-position: 50% 58%;
+    height: 300px;
+    background-repeat: no-repeat;
+    position: relative;
+    width: 98%;
+    margin: 0 auto;
+    
+}
+.subtitle {
+    position: absolute;
+    bottom: 5px;
+    right: 100px;
+    
+}
+.subtitle h2 {
+    text-align: center;
+    font-size: 30px;
+    padding: 5px;
+    width: 550px;
+    height: 35px;
+    background-color: lightblue;
+    color: gray;
+}
+
+/* about me */
+.about-me {
+    display: flex;
+    margin: auto;
+    width: 98%;
+    justify-content: space-between;
+}
+.text-title h2 {
+    margin: auto;
+    
+    
+    
+}
+.text-info p {
+    margin: auto;
+
 }
