--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,17 +71,38 @@ header a {
 /* about me */
 .about-me {
     display: flex;
-    margin: auto;
+    justify-content: center;
     width: 98%;
-    justify-content: space-between;
+    padding: 40px;
+   
+}
+.text-title {
+   
+    display: flex;
+    width: 200px;
+    position: relative;
 }
 .text-title h2 {
-    margin: auto;
+    width: 120px;
+    padding: 20px;
+    font-size: 40px;
+    text-align: right;
     
-    
-    
+    position: absolute;
+    bottom: 90px;
+    left: 40px;
+}
+.text-info {
+   display: flex;
+   justify-content: flex-end;
+   width: 70%;
+   border-left: 5px solid lightblue;
+
+
 }
 .text-info p {
-    margin: auto;
-
+  width: 98%;
+  line-height: 1.5;
+  
+  
 }
