--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 * {
     font-family: Helvetica, sans-serif;
+  
 }
 
 /* header */
@@ -69,15 +70,15 @@ header a {
 }
 
 /* about me */
-.about-me {
+#about-me {
     display: flex;
     justify-content: center;
     width: 98%;
     padding: 40px;
-   
+
 }
 .text-title {
-   
+
     display: flex;
     width: 200px;
     position: relative;
@@ -87,9 +88,9 @@ header a {
     padding: 20px;
     font-size: 40px;
     text-align: right;
-    
+  
     position: absolute;
-    bottom: 90px;
+    top: -30px;
     left: 40px;
 }
 .text-info {
@@ -101,8 +102,63 @@ header a {
 
 }
 .text-info p {
-  width: 98%;
+  width: 95%;
   line-height: 1.5;
+
   
-  
+}
+
+/* work */
+#work {
+    display: flex;
+    justify-content: center;
+    width: 98%;
+    padding: 40px;
+    margin-top: 200px;
+    position: relative;
+    top: -200px;
+}
+.images {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 0;
+    width: 70%;
+    border-left: 5px solid lightblue;
+    justify-content: center;
+    height: 800px;
+ 
+ }
+ #large-image {
+    width: 90%;
+    height: 450px;
+    border: 5px solid lightblue;
+    margin: 5px;
+    position: relative;
+    z-index: -1;
+}
+#large-image img {
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+.large-image-text {
+    position: absolute;
+}
+.large-image-text h2 {
+    z-index: 100;
+}
+#small-images {
+    display: flex;
+    flex-direction: wrap;
+    justify-content: center;
+    width: 92%;
+   
+}
+#small-images img {
+    width: 50%;
+    padding: 0;
+    height: 150px;
+    position: relative;
+    border: 5px solid lightblue;
+    margin: 5px;
 }
