--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 * {
     font-family: Helvetica, sans-serif;
-  
+
 }
 
 /* header */
@@ -126,7 +126,7 @@ header a {
     border-left: 5px solid lightblue;
     justify-content: center;
     height: 800px;
- 
+    
  }
  #large-image {
     width: 90%;
@@ -134,25 +134,44 @@ header a {
     border: 5px solid lightblue;
     margin: 5px;
     position: relative;
-    z-index: -1;
+   
+    
 }
 #large-image img {
     width: 100%;
     height: 100%;
-    z-index: -1;
+   
+    
+    
 }
-.large-image-text {
+#large-image-text {
     position: absolute;
-}
-.large-image-text h2 {
     z-index: 100;
+    bottom: 20px;
+    left: 0px;
+    background-color: lightblue;
+    padding: 5px 15px;
+    height: 50px;
+    width: 175px;
+}
+#large-image-text h3 {
+    z-index: 100;
+    padding: 1px;
+    margin: 0;
+   
+}
+#large-image-text p {
+    padding: 1px;
+    margin: 0;
+  
 }
 #small-images {
     display: flex;
     flex-direction: wrap;
     justify-content: center;
     width: 92%;
-   
+    position: relative;
+    
 }
 #small-images img {
     width: 50%;
@@ -161,4 +180,29 @@ header a {
     position: relative;
     border: 5px solid lightblue;
     margin: 5px;
+}
+.small-image-text {
+    position: absolute;
+    z-index: 100;
+    bottom: 20px;
+    left: 5px;
+    background-color: lightblue;
+    padding: 5px 15px;
+    height: 50px;
+    width: 175px;
+}
+.small-image-text-right {
+    float: right;
+    position: absolute;
+    z-index: 100;
+    bottom: 20px;
+    right: 365px;
+    background-color: lightblue;
+    width: 175px;
+    height: 50px;
+    padding: 5px 15px;
+}
+.small-image-text h3, .small-image-text-right h3,
+.small-image-text p, .small-image-text-right p {
+    margin: 0;
 }
