--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,6 @@
 }
 * {
     font-family: Helvetica, sans-serif;
-   
 }
 
 /* header */
@@ -212,3 +211,34 @@ a {
     padding-left: 70px;
 }
 
+@media screen and (max-width: 575px) {
+
+    header {
+        flex-wrap: wrap;
+        height: 100px;
+        width: 100%;
+    }
+    header div{
+        height: 40px;
+        background-color: var(--teal);
+        width: 100%;
+        font-size: 30px;
+        text-align: center;
+        margin: auto;
+    }
+    nav {
+        width: 100%;
+       height: 50px;
+       justify-content: center;
+       display: flex;
+    }
+    nav ul li a {
+        font-size: 15px !important;
+    }
+
+    .subtitle h2 {
+        font-size: 20px;
+        width: 200px;
+        height: 50px;
+    }
+}
